# crud-read-flask

./: Makefile  README.md  pyproject.toml
crud_read_flask_2907/: app.py  repository.py  test.py
crud_read_flask_2907/templates/posts/: index.html  show.html
